--- a/index.html
+++ b/index.html
@@ -157,13 +157,13 @@
 				<p class="wrap2 pdtop3 pdbottom">마찬가지로 제품 패키지와 구성품까지 전부 남겨져있던 상급의 디카를 중고시장에서 업어왔다. 보기 드문 쨍한 마젠타 느낌의 핑크컬러와 상단에 자리잡은 뷰파인더는 비싼 가격에도 사지 않을 수는 없게 만드는 독보적 매력이 있었다. 구형 저장매체를 사용하는 몇 기기들과 달리 SD카드를 사용해 💻와도 편하게 사진을 주고받을 수 있다. 맑은 날 햇빛을 잘 받으면 정말 예쁘고 아련한 분위기의 사진을 뽑아주지만, 차가운 조명의 실내에서는 상성이 그닥 좋지 않았다. 배터리 타임도 적당히 길었던 모델.</p>
 	</section>
 	<section class="bg-green">
-		<div class="div-wrap">
+		<div class="div-wrap pdbottom">
 			<h2>Lower resolutuin is the better</h2>
 			<img src="wp1-6.png" width="800px">
 				<p>제일 최근의 구매이자 첫 📹. 손떨림 방지 기능이 있으나마나한 수준이라 동영상 중간중간의 스냅샷은 멀쩡한 사진을 찾기가 더 힘들다. 하지만 동영상에 특화된 카메라인지라 비디오의 경우 부드러운 60프레임의 결과를 얻을 수 있다. 1학생회관의 동아리방에서 시범삼아 찍어본 동영상을 재생해봤는데 2010년도에 페이스북이나 카카오스토리에 돌아다닐 것 같은 영상이 나와버렸다.. 해돋이도 찍고 꽤나 애정하던 기종이었으나 배터리가 정말 구하기 힘들어 방출해버렸다.</p>
 		</div>
 	</section>
-	<footer>
+	<footer class="pdbottom">
 		My Lost Technology Chronicle &copy; 2025 최민석의 첫 웹사이트이자 권리물
 	</footer>
 </body>
