--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		  font-weight: 400;
 		  font-style: normal;
 		}
-		h3,h4,p {text-align: center;
+		h3,h4,p,footer {text-align: center;
 			font-family: "Gugi", sans-serif;
 			font-weight: 400;
   			font-style: normal;
